<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hotdog.elotto.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_navigation_home_to_qrScannerFragment"
            app:destination="@id/qrScannerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_navigation_home_to_eventDetails"
            app:destination="@id/eventDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_navigation_home_to_faqFragment"
            app:destination="@id/faqFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_navigation_home_to_notificationsFragment"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_acceptDeclineInvitation"
            app:destination="@id/acceptDeclineInvitationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_organizerEventEntrantsFragment"
            app:destination="@id/organizerEventEntrantsFragment" />
    </fragment>

    <!-- Calendar tab destination -->
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.hotdog.elotto.ui.calendar.CalendarFragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_navigation_calendar_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_navigation_calendar_to_acceptDeclineInvitationFragment"
            app:destination="@id/acceptDeclineInvitationFragment" />
        <action
            android:id="@+id/action_navigation_calendar_to_organizerEventEntrantsFragment"
            app:destination="@id/organizerEventEntrantsFragment" />
    </fragment>

    <!-- Entries tab destination (Event history) -->
    <fragment
        android:id="@+id/eventHistoryFragment"
        android:name="com.hotdog.elotto.ui.profile.EventHistoryFragment"
        android:label="Event History"
        tools:layout="@layout/fragment_event_history">

        <action
            android:id="@+id/action_eventHistoryFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hotdog.elotto.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_inbox">
        <action
            android:id="@+id/action_notificationsFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.hotdog.elotto.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/eventHistoryFragment"
        android:name="com.hotdog.elotto.ui.profile.EventHistoryFragment"
        android:label="Event History"
        tools:layout="@layout/fragment_event_history">

        <action
            android:id="@+id/action_eventHistoryFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_eventHistoryFragment_to_acceptDeclineInvitation"
            app:destination="@id/acceptDeclineInvitationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.hotdog.elotto.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_events"
        android:name="com.hotdog.elotto.ui.home.MyEventsView"
        android:label="My Events"
        tools:layout="@layout/fragment_my_events">
        <action
            android:id="@+id/action_navigation_my_events_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_my_events_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_navigation_my_events_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
        <action
            android:id="@+id/action_navigation_my_events_to_faqFragment"
            app:destination="@id/faqFragment" />
        <action
            android:id="@+id/action_navigation_my_events_to_notificationsFragment"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/action_navigation_my_events_to_organizerEventEntrantsFragment"
            app:destination="@id/organizerEventEntrantsFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.hotdog.elotto.ui.home.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_details">

        <argument
            android:name="event"
            app:argType="com.hotdog.elotto.model.Event" />
    </fragment>

    <fragment
        android:id="@+id/faqFragment"
        android:name="com.hotdog.elotto.ui.faq.FaqFragment"
        android:label="FAQ"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/organizerEventEntrantsFragment"
        android:name="com.hotdog.elotto.ui.home.OrganizerEventEntrantsFragment"
        android:label="Event Entrants"
        tools:layout="@layout/fragment_organizer_event_entrants">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/map"
        android:name="com.hotdog.elotto.ui.home.EventMapFragment"
        android:label="Event Map"
        tools:layout="@layout/fragment_event_map">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.hotdog.elotto.ui.qr.QRScannerFragment"
        android:label="Scan Event QR"
        tools:layout="@layout/fragment_qr_scanner">
        <action
            android:id="@+id/action_qrScannerFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/acceptDeclineInvitationFragment"
        android:name="com.hotdog.elotto.ui.home.AcceptDeclineInvitationFragment"
        android:label="Accept/Decline Invitation"
        tools:layout="@layout/fragment_accept_decline_invitation">
        <argument
            android:name="event"
            app:argType="com.hotdog.elotto.model.Event" />
    </fragment>
</navigation>
