...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile Button -->
        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@drawable/account_circle_24px"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile_button"
...
